Добавлен модуль aquatic-reports-spring-boot-starter